# QTIMPLANTEDCPPPROJECT

./: .gitignore  CMakeLists.txt  FinancePage.qml  IconButton.qml  MainWindow.cpp  MainWindow.h  MainWindow.ui  NavButton.qml  ReminderCard.qml  ReminderPage.qml  Win11Button.qml  addfinancedialog.cpp  addfinancedialog.h  addfinancedialog.ui  addpasswordDialog.cpp  addpasswordDialog.h  addpasswordDialog.ui  addreminderDialog.cpp  addreminderDialog.h  addreminderDialog.ui  main.cpp  main.qml  noreadme.md  record.cpp  record.h  remindermanager.cpp  remindermanager.h  unified_manager.cpp  unified_manager.h
